--- a/css/storeia.css
+++ b/css/storeia.css
@@ -564,7 +564,7 @@ h2:hover {
 /* ------------------------------- */
 
 .contenido .accesorios .accesorio {
-    height: 340px;
+    height: 380px;
     padding: 10px;
     margin-bottom: 50px;
     display: flex;
@@ -620,6 +620,34 @@ h2:hover {
     width: 70%;
     height: 70%;
     justify-self: center;
+}
+
+.contenido .accesorios .accesorio .accesorio-tipo p {
+    text-align: center;
+    background-color: #bababa;
+    border-radius: 10px;
+    padding: 10px;
+    color: #fff;
+    font-weight: 500;
+    transition: .5;
+    animation-name: deslizar;
+    animation-duration: 2s;
+}
+
+
+/*
+@keyframes deslizar {
+    from {
+        transform: scale(.5);
+    }
+    to {
+        transform: scale(1);
+    }
+}*/
+
+.contenido .accesorios .accesorio .accesorio-tipo p:hover {
+    background-color: rgba(255, 131, 51, .5);
+    transition: .5;
 }
 
 .contenido .accesorios .accesorio .accesorio-tipo a {
