--- a/css/storeia.css
+++ b/css/storeia.css
@@ -1081,6 +1081,9 @@ footer .social-desa .redes {
         margin-top: 58px;
         padding: 10px;
     }
+    .contenido .presentacion .slider .slides .slide img {
+        height: inherit;
+    }
     .contenido .mi_trabajo .formateo .sistemas_operativos .windows .windows-distribuciones .sistemas {
         width: 150px;
         height: 200px;
